# ewconfig

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  install-linux.sh  install-windows.sh  install.conf.yaml  requirements.txt
.github/workflows/: docker.yml  modpack.yml
ChromeOS/: .profile  README.md
ChromeOS/banners/: .current
ChromeOS/bashrc/: .bashrc  .bashrc.backup  .bashrc1  README.md  bashrc
ChromeOS/zsh/: .zshrc
configs/: .gitconfig  .inputrc  .zshrc  global.gitignore
configs/autostart/: gnome-keyring-ssh.desktop  logid.desktop
configs/bash/: .bashrc
configs/git/: .gitconfig  .mailmap
helpers/: configure-gnome.sh  generate-rdp-tls-certs.sh  git-config-features.sh  install-ssh-config.sh
meta/agent/: Cargo.toml
meta/agent/src/: crypto.rs  main.rs
mini_apps/: README.md
modules/: README.md
nodes/: laptop.yml
scripts/: 1p-bridge  ableton-linux  age-open  amprdns-delete-record  amprdns-list-records  apple-allow-binary  aprs-to-mqtt  aspath  baofeng2gqrx  basejump  basejump-discover  basejump-fetch  blink-check  blink-fetch  blink-timelapse  caddy-se-allow  catto  cf-dump-zone  cfddns  clippath  configure-gnome-remote-desktop  cursedecompiler  deadline-gpu-inventory  deadline-read-options  dig-authoritative  dlcrypt  enable-udm-ipv6  ewconfig-pull  ewconfig-reinstall  ewconfig-run  ewp-best-terminal  ewp-generate-article-digest  ewp-secrets  ewp-send-article-digest  ewp-send-new-mail-summary  ewp-sendmail  ewp-yum-repo  ezlink  ezlink3  fetch-steamdeck-screenshots  (+78 more)
ubuntu/: (movetousrlocalbin)-settings  .zshrc
(+163 files in other folders)
