[package]
name = "ewconfig-agent"
publish = false
edition = "2021"

[dependencies]
ewconfig-meta-common = { path = "../common" }
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
ssh-key = { version = "0.6.7", features = ["ed25519"] }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde_json = "^1.0"
directories = "5.0.1"
rand = "0.8.5"
log = "0.4.22"
anyhow = "1.0.94"
url = "2.5.4"

[[bin]]
name = "ewconfig-agent"
